// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageSnippet > repeatable model > return a snippet with JavaScript 1`] = `
{
  "content": "## Create your Repeatable's page data fetcher

Add a new route by creating a \`src/routes/[[preview=preview]]/[uid]/+page.server.js\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/[uid]/+page.server.js\`.)

Paste in this code:

~~~javascript [src/routes/[[preview=preview]]/[uid]/+page.server.js]
import { createClient } from \\"$lib/prismicio\\";

/* @type {import(\\"./$types\\").PageServerLoad} */
export async function load({ params, fetch, cookies }) {
  const client = createClient({ fetch, cookies });

  const page = await client.getByUID(\\"repeatable\\", params.uid);

  return {
    page,
  };
}

/* @type {import(\\"./$types\\").EntryGenerator} */
export async function entries() {
  const client = createClient();

  const pages = await client.getAllByType(\\"repeatable\\");

  return pages.map((page) => {
    return { uid: page.uid };
  });
}
~~~

## Create your Repeatable's page component

In the route's directory, create a \`src/routes/[[preview=preview]]/[uid]/+page.svelte\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/[uid]/+page.svelte\`.)

Paste in this code:

~~~svelte [src/routes/[[preview=preview]]/[uid]/+page.svelte]
<script>
  import { SliceZone } from \\"@prismicio/svelte\\";

  import { components } from \\"$lib/slices\\";

  /* @type {import(\\"./$types\\").PageProps} */
  const { data } = $props();
</script>

<SliceZone slices={data.page.data.slices} {components} />
~~~

Make sure all of your import paths are correct. See the [install guide](https://prismic.io/docs/svelte-install) for more information.",
  "label": "Default",
}
`;

exports[`PageSnippet > repeatable model > return a snippet with TypeScript for TypeScript projects 1`] = `
{
  "content": "## Create your Repeatable's page data fetcher

Add a new route by creating a \`src/routes/[[preview=preview]]/[uid]/+page.server.ts\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/[uid]/+page.server.ts\`.)

Paste in this code:

~~~typescript [src/routes/[[preview=preview]]/[uid]/+page.server.ts]
import { createClient } from \\"$lib/prismicio\\";
import type { PageServerLoad, EntryGenerator } from \\"./$types\\";

export const load: PageServerLoad = async ({ params, fetch, cookies }) => {
  const client = createClient({ fetch, cookies });

  const page = await client.getByUID(\\"repeatable\\", params.uid);

  return {
    page,
  };
};

export const entries: EntryGenerator = async () => {
  const client = createClient();

  const pages = await client.getAllByType(\\"repeatable\\");

  return pages.map((page) => {
    return { uid: page.uid };
  });
};
~~~

## Create your Repeatable's page component

In the route's directory, create a \`src/routes/[[preview=preview]]/[uid]/+page.svelte\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/[uid]/+page.svelte\`.)

Paste in this code:

~~~svelte [src/routes/[[preview=preview]]/[uid]/+page.svelte]
<script lang=\\"ts\\">
  import { SliceZone } from \\"@prismicio/svelte\\";

  import { components } from \\"$lib/slices\\";
  import type { PageProps } from \\"./$types\\";

  const { data }: PageProps = $props();
</script>

<SliceZone slices={data.page.data.slices} {components} />
~~~

Make sure all of your import paths are correct. See the [install guide](https://prismic.io/docs/svelte-install) for more information.",
  "label": "Default",
}
`;

exports[`PageSnippet > single model > return a snippet with JavaScript 1`] = `
{
  "content": "## Create your Single's page data fetcher

Add a new route by creating a \`src/routes/[[preview=preview]]/single/+page.server.js\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/single/+page.server.js\`.)

Paste in this code:

~~~javascript [src/routes/[[preview=preview]]/single/+page.server.js]
import { createClient } from \\"$lib/prismicio\\";

/* @type {import(\\"./$types\\").PageServerLoad} */
export async function load({ params, fetch, cookies }) {
  const client = createClient({ fetch, cookies });

  const page = await client.getSingle(\\"single\\");

  return {
    page,
  };
}

/* @type {import(\\"./$types\\").EntryGenerator} */
export async function entries() {
  return [{}];
}
~~~

## Create your Single's page component

In the route's directory, create a \`src/routes/[[preview=preview]]/single/+page.svelte\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/single/+page.svelte\`.)

Paste in this code:

~~~svelte [src/routes/[[preview=preview]]/single/+page.svelte]
<script>
  import { SliceZone } from \\"@prismicio/svelte\\";

  import { components } from \\"$lib/slices\\";

  /* @type {import(\\"./$types\\").PageProps} */
  const { data } = $props();
</script>

<SliceZone slices={data.page.data.slices} {components} />
~~~

Make sure all of your import paths are correct. See the [install guide](https://prismic.io/docs/svelte-install) for more information.",
  "label": "Default",
}
`;

exports[`PageSnippet > single model > return a snippet with TypeScript for TypeScript projects 1`] = `
{
  "content": "## Create your Single's page data fetcher

Add a new route by creating a \`src/routes/[[preview=preview]]/single/+page.server.ts\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/single/+page.server.ts\`.)

Paste in this code:

~~~typescript [src/routes/[[preview=preview]]/single/+page.server.ts]
import { createClient } from \\"$lib/prismicio\\";
import type { PageServerLoad, EntryGenerator } from \\"./$types\\";

export const load: PageServerLoad = async ({ params, fetch, cookies }) => {
  const client = createClient({ fetch, cookies });

  const page = await client.getSingle(\\"single\\");

  return {
    page,
  };
};

export const entries: EntryGenerator = async () => {
  return [{}];
};
~~~

## Create your Single's page component

In the route's directory, create a \`src/routes/[[preview=preview]]/single/+page.svelte\` file. (If the route should be nested in a child directory, you can create the file in a directory, like \`src/routes/marketing/[[preview=preview]]/single/+page.svelte\`.)

Paste in this code:

~~~svelte [src/routes/[[preview=preview]]/single/+page.svelte]
<script lang=\\"ts\\">
  import { SliceZone } from \\"@prismicio/svelte\\";

  import { components } from \\"$lib/slices\\";
  import type { PageProps } from \\"./$types\\";

  const { data }: PageProps = $props();
</script>

<SliceZone slices={data.page.data.slices} {components} />
~~~

Make sure all of your import paths are correct. See the [install guide](https://prismic.io/docs/svelte-install) for more information.",
  "label": "Default",
}
`;
